[package]
name = "rusthering"
authors = ["Othman Lanizi <othman.lanizi@gmail.com>"]
description = "A small CLI providing dithering capabilities"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
rand = "0.8.5"